--- a/frontend/register.html
+++ b/frontend/register.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/public.css">
 	<link rel="stylesheet" media="screen and (min-width:980px)" href="css/pc.css"><!--大于980px的时候-->
 	<link rel="stylesheet" media="screen and (max-width:780px)" href="css/mobile.css"><!--手机的时候-->
-	<script src="js/jquery-2.1.1.min.js"></script>
+<!-- 	<script src="js/jquery-2.1.1.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/rem.js"></script>
 	<script src="js/idangerous.swiper2.7.6.min.js"></script>
@@ -25,7 +25,8 @@
     <script src="js/shopCar.js"></script>
     <script src="js/formValid.js"></script>
     <script src="js/form.js"></script>
-    <script src="http://cdn.suoluomei.com/common/js2.0/axios/axios.min.js"></script>
+<!--     <script src="http://cdn.suoluomei.com/common/js2.0/axios/axios.min.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- <!–[if lt IE 9]>
         <script src=”http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js”></script>
